--- a/paginas/diodos.html
+++ b/paginas/diodos.html
@@ -21,12 +21,11 @@
     <div>
         <div id="contenido">
             <div id="subContenido">
-                <div style="background-color: white; text-align: center;">
-                    <h1 style="font-family: fuenteNueva; font-size:4rem">Diodos</h1>
+                <div style="text-align: center;">
+                    <h1 style="font-family: fuenteNueva; font-size:4rem; color: white;">Diodos</h1>
                 </div>
-                <div style="background-color: green;">
-                    <section>
-                        <h1>Diodos</h1>
+                <div style="color: white;">
+                    <section style="font-size: 1.2rem;">
                         <p>
                             Un diodo es un componente electrónico semiconductor que permite el paso de la corriente en
                             un solo sentido.
@@ -42,8 +41,6 @@
                             <li><strong>Unión PN</strong>: región interna donde ocurre la conducción.</li>
                         </ul>
 
-                        <hr>
-
                         <h2>Tipos de Diodos</h2>
                         <ul>
                             <li><strong>Diodo rectificador</strong>: usado para convertir CA en CC.</li>
@@ -54,7 +51,7 @@
                             <li><strong>Diodo varactor (o varicap)</strong>: funciona como capacitor variable.</li>
                             <li><strong>Diodo fotodetector (fotodiodo)</strong>: genera corriente con luz.</li>
                         </ul>
-                        <hr>
+
                         <h2>Características principales</h2>
                         <ul>
                             <li><strong>Caída de voltaje directa:</strong> ≈ 0.7 V (silicio), 0.3 V (germanio), 1.8–3.3
@@ -65,45 +62,47 @@
                             <li><strong>Tiempo de recuperación inversa:</strong> velocidad al cambiar entre estados.
                             </li>
                         </ul>
-                        <hr>
+
                         <h2>Tabla comparativa de tipos de diodos</h2>
-                        <table border="1" cellpadding="8">
-                            <tr>
-                                <th>Tipo de diodo</th>
-                                <th>Características</th>
-                                <th>Aplicaciones</th>
-                            </tr>
-                            <tr>
-                                <td>Rectificador</td>
-                                <td>Alta corriente, robusto</td>
-                                <td>Fuentes de alimentación</td>
-                            </tr>
-                            <tr>
-                                <td>Zener</td>
-                                <td>Opera en ruptura controlada</td>
-                                <td>Regulación de voltaje</td>
-                            </tr>
-                            <tr>
-                                <td>LED</td>
-                                <td>Emite luz al conducir</td>
-                                <td>Iluminación, indicadores</td>
-                            </tr>
-                            <tr>
-                                <td>Schottky</td>
-                                <td>Baja caída (~0.2 V), muy rápido</td>
-                                <td>Rectificación rápida, fuentes conmutadas</td>
-                            </tr>
-                            <tr>
-                                <td>Señal</td>
-                                <td>Rápido, baja corriente</td>
-                                <td>RF, comunicaciones</td>
-                            </tr>
-                            <tr>
-                                <td>Varactor</td>
-                                <td>Capacitancia variable</td>
-                                <td>Sintonizadores, RF</td>
-                            </tr>
-                        </table>
+                        <center>
+                            <table border="1" cellpadding="8">
+                                <tr>
+                                    <th>Tipo de diodo</th>
+                                    <th>Características</th>
+                                    <th>Aplicaciones</th>
+                                </tr>
+                                <tr>
+                                    <td>Rectificador</td>
+                                    <td>Alta corriente, robusto</td>
+                                    <td>Fuentes de alimentación</td>
+                                </tr>
+                                <tr>
+                                    <td>Zener</td>
+                                    <td>Opera en ruptura controlada</td>
+                                    <td>Regulación de voltaje</td>
+                                </tr>
+                                <tr>
+                                    <td>LED</td>
+                                    <td>Emite luz al conducir</td>
+                                    <td>Iluminación, indicadores</td>
+                                </tr>
+                                <tr>
+                                    <td>Schottky</td>
+                                    <td>Baja caída (~0.2 V), muy rápido</td>
+                                    <td>Rectificación rápida, fuentes conmutadas</td>
+                                </tr>
+                                <tr>
+                                    <td>Señal</td>
+                                    <td>Rápido, baja corriente</td>
+                                    <td>RF, comunicaciones</td>
+                                </tr>
+                                <tr>
+                                    <td>Varactor</td>
+                                    <td>Capacitancia variable</td>
+                                    <td>Sintonizadores, RF</td>
+                                </tr>
+                            </table>
+                        </center>
                     </section>
 
                 </div>
@@ -114,13 +113,13 @@
                         <img src="../imgs/diodo.png" style="height: 200px;" alt="no se puede cargar la img">
                     </center>
                 </div>
-                <div style="background-color: blue; width: 100%;height:auto">
+                <div style="width: 100%;height:auto; color: white;">
                     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
                     <script id="MathJax-script" async
                             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
                     </script>
 
-                    <section style="font-family: fuenteNueva;">
+                    <section style="font-family: mathFont;font-size: 1.2rem;">
                         <h2>Fórmulas de Diodos</h2>
 
                         <h3>1. Ecuación del diodo (Ecuación de Shockley)</h3>
@@ -137,14 +136,10 @@
                             <li>\( V_T = \frac{kT}{q} \): Voltaje térmico ~26 mV a temperatura ambiente</li>
                         </ul>
 
-                        <hr>
-
                         <h3>2. Polarización directa</h3>
                         <p>\[
                             V_D \approx 0.7\,\text{V (Silicio)} \qquad V_D \approx 0.3\,\text{V (Germanio)}
                         \]</p>
-
-                        <hr>
 
                         <h3>3. Corriente inversa</h3>
                         <p>\[
@@ -153,7 +148,6 @@
 
                         <p>(Pequeña corriente de fuga cuando el diodo está en inversa).</p>
 
-                        <hr>
 
                         <h3>4. Región Zener (ruptura controlada)</h3>
                         <p>\[
@@ -170,14 +164,11 @@
                             P_Z = V_Z \cdot I_Z
                         \]</p>
 
-                        <hr>
 
                         <h3>5. Potencia en un diodo</h3>
                         <p>\[
                             P = V_D \cdot I_D
                         \]</p>
-
-                        <hr>
                     </section>
 
                 </div>
