--- a/paginas/transistores.html
+++ b/paginas/transistores.html
@@ -18,11 +18,11 @@
     <div>
         <div id="contenido">
             <div id="subContenido">
-                <div style="text-align: center; background-color: white; display: inline-block;">
+                <div style="text-align: center; color:  white; display: inline-block;">
                     <br><br><br><br>
-                    <h1 style="font-family: fuenteNueva; font-size:4rem">Transistores</h1>
+                    <h1 style="font-family: fuenteNueva; font-size:3rem">Transistores</h1>
                 </div>
-                <div style="background-color: green;">
+                <div style="color: white;">
                     <p class="txtInfo">
                         Los transistores son componentes electrónicos fundamentales que sirven para controlar, amplificar o conmutar señales eléctricas. Son la base de casi toda la electrónica moderna (computadoras, radios, fuentes de poder, sensores, etc.).<br>
                         Es como un interruptor electrónico que puede encenderse o apagarse muy rápido, o trabajar de forma intermedia para amplificación.
@@ -51,9 +51,6 @@
                                 <li>Consumen más corriente.</li>
                                 <li>Menor eficiencia en conmutación.</li>
                             </ul>
-
-                            <hr>
-
                             <h2>2. FET (Field Effect Transistor)</h2>
                             <p>El FET es un transistor de efecto de campo que utiliza solo portadores mayoritarios y es controlado por voltaje.</p>
 
@@ -89,7 +86,6 @@
                                 <li>Linealidad inferior en ciertos rangos comparado con BJT.</li>
                             </ul>
 
-                            <hr>
                             <table border="1" cellpadding="8">
                                 <tr>
                                 <th>Característica</th>
@@ -139,7 +135,7 @@
                         <img src="../imgs/transistor.png" style="height: 400px;" alt="no se puede cargar la img">
                     </center>
                 </div>
-                <div style="background-color: cyan; width: 100%; font-family: mathFont;">
+                <div style="color: white; width: 100%; font-family: mathFont;">
                     <!-- Agregar MathJax para renderizar fórmulas -->
                     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
                     <script id="MathJax-script" async
