--- a/paginas/header.html
+++ b/paginas/header.html
@@ -16,7 +16,7 @@
             <a style="text-decoration: none; color:white; font-family:fuenteNueva" href="../index.html">Paginal inicial</a>
         </center>
         <center>
-            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
+            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../paginas/fuentes.html">Fuentes</a>
         </center>
         <center>
             <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
