--- a/paginas/fuentes.html
+++ b/paginas/fuentes.html
@@ -174,60 +174,33 @@
             <div class="reference">
                 <span class="ref-number">1</span>
                 <div style="display: inline-block; vertical-align: top; width: calc(100% - 50px);">
-                    <p class="author">García Martínez, A., & López Hernández, J.</p>
-                    <p class="year">(2023)</p>
-                    <p class="title">Análisis comparativo de metodologías de investigación en ciencias sociales</p>
-                    <p class="publication">Revista de Metodología Científica, 45(2), 123-145.</p>
-                    <a href="#" class="doi">DOI: 10.1234/rmc.2023.45.2.123</a>
+                    <p class="title">Crodriguez, & Crodriguez. (2024, 16 abril). Qué es un transistor, para qué sirve y cómo funciona. SDI Industrial. https://sdindustrial.com.mx/blog/que-es-un-transistor-para-que-sirve-y-como-funciona/</p>
                 </div>
             </div>
-
-            <div class="reference">
-                <span class="ref-number">2</span>
-                <div style="display: inline-block; vertical-align: top; width: calc(100% - 50px);">
-                    <p class="author">Smith, R., Johnson, M., & Williams, K.</p>
-                    <p class="year">(2022)</p>
-                    <p class="title">Digital transformation in modern education systems</p>
-                    <p class="publication">International Journal of Educational Technology, 18(4), 567-589.</p>
-                    <a href="#" class="doi">DOI: 10.5678/ijet.2022.18.4.567</a>
-                </div>
-            </div>
-
-            <div class="divider"></div>
-
-            <h2 class="section-title">Libros y Monografías</h2>
 
             <div class="reference">
                 <span class="ref-number">3</span>
                 <div style="display: inline-block; vertical-align: top; width: calc(100% - 50px);">
-                    <p class="author">Rodríguez Sánchez, M.</p>
-                    <p class="year">(2021)</p>
-                    <p class="title">Fundamentos de la investigación cualitativa</p>
-                    <p class="publication">Madrid: Editorial Académica.</p>
+                    <p class="title">Fluke. (2025, 6 septiembre). ¿Qué es la resistencia? Fluke Corporation. https://www.fluke.com/es-mx/informacion/blog/electrica/que-es-la-resistencia</p>
                 </div>
             </div>
-
-            <div class="reference">
-                <span class="ref-number">4</span>
+               <div class="reference">
+                <span class="ref-number">2</span>
                 <div style="display: inline-block; vertical-align: top; width: calc(100% - 50px);">
-                    <p class="author">Brown, T., & Davis, L.</p>
-                    <p class="year">(2020)</p>
-                    <p class="title">Research methods in social sciences: A comprehensive guide</p>
-                    <p class="publication">New York: Academic Press, 3ª edición.</p>
+                    <p class="title">Notes, E. (s. f.). Capacitor formulas: Capacitance equations » Electronics Notes. https://www.electronics-notes.com/articles/basic_concepts/capacitance/capacitor-formulas-equations.php</p>
                 </div>
             </div>
-
-            <div class="divider"></div>
-
-            <h2 class="section-title">Capítulos de Libro</h2>
+                <div class="reference">
+                    <span class="ref-number">4</span>
+                    <div style="display: inline-block; vertical-align: top; width: calc(100% - 50px);">
+                    <p class="title">SwellFox. (2023, 25 enero). Inductors - Electrical Equation Library. CircuitBread. https://www.circuitbread.com/equations/inductors</p>
+                </div>
+            </div>
 
             <div class="reference">
                 <span class="ref-number">5</span>
                 <div style="display: inline-block; vertical-align: top; width: calc(100% - 50px);">
-                    <p class="author">Fernández Ruiz, C.</p>
-                    <p class="year">(2023)</p>
-                    <p class="title">La ética en la investigación científica contemporánea</p>
-                    <p class="publication">En P. Gómez (Ed.), <em>Perspectivas actuales en metodología</em> (pp. 78-102). Barcelona: Ediciones Universidad.</p>
+                    <p class="title">Crodriguez, & Crodriguez. (2023, 12 julio). ¿Qué es un diodo y cómo funciona? SDI Industrial. https://sdindustrial.com.mx/blog/que-es-un-diodo/</p>
                 </div>
             </div>
         </div>
