--- a/paginas/header.html
+++ b/paginas/header.html
@@ -18,8 +18,8 @@
         <center>
             <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../paginas/fuentes.html">Fuentes</a>
         </center>
-        <center>
-            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
-        </center>
+        <div>
+            
+        </div>
     </div>
 </div>
