--- a/paginas/header.html
+++ b/paginas/header.html
@@ -1,7 +1,7 @@
 <div id="boxHead">
     <div id="boxHeadTittle">
         <center>
-            <img style="height: 110px;" src="/imgs/circuito_logo.png" alt="No se encontro la imagen">
+            <img style="height: 110px;" src="imgs/circuito_logo.png" alt="No se encontro la imagen">
         </center>
         <center>
             <h1 style="height: 100%; width: 100%; font-family:fuenteNueva" >Circuitos</h1>
