--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <div class="parent1">
             <div>
-                <a href="/paginas/resistores.html" class="linkOtraPagina">
+                <a href="paginas/resistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2 style="font-family:fuenteNueva">Resistores</h2>
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div>
-                <a href="/paginas/capacitores.html" class="linkOtraPagina">
+                <a href="paginas/capacitores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2 style="font-family:fuenteNueva">Capacitores</h2>
@@ -55,7 +55,7 @@
                 </a>
             </div>
             <div>
-                <a href="/paginas/inductores.html" class="linkOtraPagina">
+                <a href="paginas/inductores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2 style="font-family:fuenteNueva">Inductores</h2>
@@ -79,7 +79,7 @@
         <div class="parent2">
             <div></div>
             <div>
-                <a href="/paginas/diodos.html" class="linkOtraPagina">
+                <a href="paginas/diodos.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2 style="font-family:fuenteNueva">Diodos</h2>
@@ -96,7 +96,7 @@
                 </a>
             </div>
             <div>
-                <a href="/paginas/transistores.html" class="linkOtraPagina">
+                <a href="paginas/transistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2 style="font-family:fuenteNueva">Transistores</h2>
@@ -127,7 +127,7 @@
 </body> 
 <footer>
     <div>
-        <img style="height: 200px;" src="/imgs/logo_udec.png" alt="no se pudo cargar la imagen">
+        <img style="height: 200px;" src="imgs/logo_udec.png" alt="no se pudo cargar la imagen">
     </div>
 </footer>
 </html>
